--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -25,7 +25,13 @@ Het onderzoek van \textcite{Schryver2024} had als doel om spraak naar tekst om t
 
 \section{Onderzoek naar het onderscheiden van stemmen}
 %TODO: nog meer info nodig!
+Wanneer gezocht wordt naar manieren om stemmen te onderscheiden, is "speaker diarization" een term die vaak vernoemd wordt. Speaker diarization wordt beschreven als het bepalen wie wanneer spreekt in een audio of video opname waarvaan niet geweten is hoe vaak gesproken wordt en hoeveel sprekers aanwezig zijn \textcite{AngueraMiro2012}.
 
 \section{Reeds bestaande modellen}
 %TODO: meer frameworks nodig
+
+\subsection{Diarization modellen}
+
+
+\subsection{Evaluatie van modellen voor diarization}
 
