literatuurstudie bp verder uitgewerkt

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -128,4 +128,75 @@
   publisher    = {MDPI AG},
 }
 
+@Thesis{Govaerts2022,
+  author      = {Arne Govaerts},
+  date        = {2022},
+  institution = {HOGENT},
+  title       = {Detecteren van elderspeak},
+  type        = {bathesis},
+}
+
+@Thesis{Gussem2022,
+  author      = {Sibian De Gussem},
+  date        = {2022},
+  institution = {HOGENT},
+  title       = {Nursery Tone Monitor: detecteren van elderspeak via AI},
+  type        = {bathesis},
+}
+
+@Thesis{Daems2023,
+  author      = {Benjamin Daems},
+  date        = {2023},
+  institution = {HOGENT},
+  title       = {Nursery Tone Monitor. Verbetering van elderspeech-detectie door middel van ruisonderdrukking en stilteherkenning},
+  type        = {bathesis},
+}
+
+@Thesis{Coetsiers2024,
+  author      = {Jens Coetsiers},
+  date        = {2024},
+  institution = {HOGENT},
+  title       = {Transcriptie van één-op-één-gesprekken in Vlaamse spreektaal: Evaluatie van beschikbare STT-Systemen voor het Nederlands.},
+  type        = {bathesis},
+}
+
+@Thesis{Schryver2024,
+  author      = {Bianca De Schryver},
+  date        = {2024},
+  institution = {HOGENT},
+  title       = {Whisper Spraak-naar-tekstmodel testen voor het monitoren van 'secondary babytalk' in de zorgverlening.},
+  type        = {bathesis},
+}
+
+@Thesis{Branden2024,
+  author      = {Ine Van den Branden},
+  date        = {2024},
+  institution = {HOGENT},
+  title       = {Elderspeak Detector: tekstanalyse met behulp van AI voor het detecteren van 'Secondary Babytalk' in de zorgverlening.},
+  type        = {bathesis},
+}
+
+@InProceedings{Bredin2023,
+  author     = {Bredin, Hervé},
+  booktitle  = {INTERSPEECH 2023},
+  date       = {2023-08},
+  title      = {pyannote.audio 2.1 speaker diarization pipeline: principle, benchmark, and recipe},
+  doi        = {10.21437/interspeech.2023-105},
+  publisher  = {ISCA},
+  series     = {interspeech_2023},
+  collection = {interspeech_2023},
+}
+
+@InProceedings{Bredin2017,
+  author     = {Bredin, Hervé},
+  booktitle  = {Interspeech 2017},
+  date       = {2017-08},
+  title      = {pyannote.metrics: A Toolkit for Reproducible Evaluation, Diagnostic, and Error Analysis of Speaker Diarization Systems},
+  doi        = {10.21437/interspeech.2017-411},
+  pages      = {3587--3591},
+  publisher  = {ISCA},
+  series     = {interspeech_2017},
+  collection = {interspeech_2017},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
