--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -14,6 +14,9 @@ Het Zorglab is een lokaal dat voornamelijk gebruikt wordt tijdens de praktijkles
 
 In voorgaande jaren werd in de bachelorproeven van \textcite{Govaerts2022}, \textcite{Gussem2022} en \textcite{Daems2023} reeds succesvol een applicatie ontwikkeld die signalen van elderspeak kan herkennen aan de hand van kenmerken zoals toonhoogte en stemvolume. In deze applicatie kan men een audiofragment uploaden en dit aan de hand van een aantal parameters laten analyseren. In de jaren die daarop volgden werd er in de bachelorproeven van \textcite{Branden2024}, \textcite{Coetsiers2024} en \textcite{Schryver2024} onderzoek gedaan naar het integreren van een model dat spraak kan omzetten naar tekst, maar hier werd aangetoond dat de accuraatheid van bestaande modellen onvoldoende blijkt te zijn om een kwaliteitsvolle transcriptie uit te voeren van gesproken Nederlands.
 
+%TODO: een van de onderstaande alineas verwijderen afhankelijk van antwoord van Jorrit
+Aangezien de implementatie van speech-to-text nog niet geslaagd was, was er vraag naar een methode om stemmen te onderscheiden. Dit heeft als doel het proces voor de implementatie van speech-to-text in de applicatie gemakkelijk te maken.
+
 Ondanks het feit dat de applicatie ondertussen al ver gevorderd is, ontbreken er nog steeds een aantal zaken, zoals de speech-to-text functie waar door \textcite{Schryver2024} reeds naar gezocht werd. Een andere functie die nog ontbreekt is het onderscheid maken tussen de stemmen van de verpleegkundige in opleiding en de patiënt. De huidige applicatie zoekt naar signalen van secondary babytalk in het volledige audiofragment dat in het Zorglab opgenomen wordt, wat wil zeggen dat de delen van de patiënt ook geanalyseerd worden. Dit is echter niet de bedoeling, aangezien de feedback enkel nodig is voor de student. Hierdoor is er dus vraag naar een functie die stem van de student uit de audio kan filteren, zodat enkel deze geanalyseerd wordt. Dit zou eventueel ook kunnen leiden tot het succesvol implementeren van een speech-to-text functie in de toekomst, aangezien dit de complexiteit van het audiofragment verlaagt.
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
