aanpassing in inleiding

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -199,4 +199,13 @@
   collection = {interspeech_2017},
 }
 
+@InProceedings{Xie2019,
+  author    = {Xie, Weidi and Nagrani, Arsha and Chung, Joon Son and Zisserman, Andrew},
+  booktitle = {ICASSP 2019 - 2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  date      = {2019-05},
+  title     = {Utterance-level Aggregation for Speaker Recognition in the Wild},
+  doi       = {10.1109/icassp.2019.8683120},
+  publisher = {IEEE},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
