--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -208,4 +208,35 @@
   publisher = {IEEE},
 }
 
+@InProceedings{Coria2021,
+  author    = {Coria, Juan M. and Bredin, Herve and Ghannay, Sahar and Rosset, Sophie},
+  booktitle = {2021 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU)},
+  date      = {2021-12},
+  title     = {Overlap-Aware Low-Latency Online Speaker Diarization Based on End-to-End Local Segmentation},
+  doi       = {10.1109/asru51503.2021.9688044},
+  pages     = {1139--1146},
+  publisher = {IEEE},
+}
+
+@InProceedings{Plaquet23,
+  author     = {Alexis Plaquet and Hervé Bredin},
+  booktitle  = {Proc. INTERSPEECH 2023},
+  date       = {2023-08},
+  title      = {{Powerset multi-class cross entropy loss for neural speaker diarization}},
+  doi        = {10.21437/interspeech.2023-205},
+  publisher  = {ISCA},
+  series     = {interspeech_2023},
+  collection = {interspeech_2023},
+  year       = {2023},
+}
+
+@Online{Bredin2024,
+  author   = {Bredin, Hervé},
+  date     = {2024-06-23},
+  title    = {pyannote-audio},
+  url      = {https://github.com/pyannote/pyannote-audio},
+  language = {English},
+  urldate  = {2025-03-14},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
