--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -30,10 +30,11 @@ Dit hoofdstuk bespreekt kort de fasen van het onderzoek. Per fase word kort besp
 
 \paragraph{Literatuurstudie en modellen zoeken}
 Deze fase bestaat uit het opzoeken van info omtrent diarization en welke bestaande modellen hier al voor zijn. Hieruit worden de modellen gekozen die het meeste potentieel lijken te hebben om tot een goed eindresultaat te komen en wordt gekeken wat de beste manier van aanpakken is.\\
-Naast het zoeken naar modellen, wordt ook gezocht naar methoden om deze modellen te evalueren. Dit zorgt ervoor dat er een gegronde keuze kan gemaakt worden om verder te gaan met een specifiek model. Dit zorgt er in een latere fase ook voor dat er gekozen kan worden voor de beste parameters voor het model.
+Naast het zoeken naar modellen, wordt ook gezocht naar methoden om deze modellen te evalueren. Dit zorgt ervoor dat er een gegronde keuze kan gemaakt worden om verder te gaan met een specifiek model. Dit zorgt er in een latere fase ook voor dat er gekozen kan worden voor de beste parameters voor het model.\\
+De gevonden modellen worden getest aan de hand van een specifiek audiofragment. Afhankelijk van de bruikbaarheid van het model en hoe succesvol het onderscheiden van stemmen reeds is, wordt het model al dan niet gebruikt worden om te trainen.
 
-\paragraph{Modellen trainen}
-In deze fase worden de modellen die in de eerste fase gekozen werden getraind met Vlaamse audiofragmenten in drie stappen. In eerste instantie gebeurt dit met eenvoudige fragmenten die weinig tot geen overlap en ruis bevatten. Hierna wordt voor complexere audio gekozen die meer overlap bevat om in de derde stap te eindigen met audio die zowel overlap als ruis bevat.\\
+\paragraph{Model trainen}
+In deze fase worden de modellen die in de eerste fase gekozen werden getraind met Vlaamse audiofragmenten. In eerste instantie gebeurt dit met korte, eenvoudige fragmenten die weinig tot geen overlap en ruis bevatten. Hierna wordt voor complexere audio gekozen die meer overlap bevat om in de derde stap te eindigen met audio die zowel overlap als ruis bevat.\\
 Bij elk van deze trainingsstappen wordt aan de hand van evaluatiemethoden die gevonden werden in de eerste fase bijgehouden hoe goed elk model scoort.
 
 \paragraph{Finetunen en evalueren}
