--- a/bachproef/VerhoeyenLisaBP.tex
+++ b/bachproef/VerhoeyenLisaBP.tex
@@ -53,8 +53,8 @@
 \author{Lisa Verhoeyen}
 \supervisor{Mevr. V. Depestele}
 \cosupervisor{Dhr. J. Campens}
-\title[Optionele ondertitel]%
-    {Titel van de bachelorproef}
+\title[]%
+    {Stemmen onderscheiden voor het opsporen van elderspeak in de Vlaamse zorgcontext}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{1}
 \degreesought{\IfLanguageName{dutch}{Professionele bachelor in de toegepaste informatica}{Bachelor of applied computer science}}
