--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -45,4 +45,4 @@
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
 
-\lipsum[1-4]
+Ondanks het feit dat de zorgsector de dag van vandaag vooral op persoonsgerichte zorgverlening focust, ervaren oudere patiënten vaak dat de communicatie te betuttelend is. Dit fenomeen staat bekend als elderspeak of secondary babytalk. Om dit tegen te gaan is er vanuit de opleiding verpleegkunde aan HOGENT het initiatief genomen om een applicatie te gebruiken die de studenten erop wijst als ze gebruik maken van elderspeak. Deze applicatie werd reeds ontworpen in voorgaande bachelorproeven, maar er ontbreken nog een aantal functionaliteiten voordat deze gebruikt kan worden in de opleiding. Deze paper heeft als doel de mogelijkheid te bieden om in de applicatie enkel de stem van de zorgverlener te analyseren en signalen van secondary babytalk op te sporen. Dit wordt bereikt aan de hand van het zoeken naar en trainen van geschikte modellen die stemmen kunnen onderscheiden. Het meest geschikte model wordt nadien geïmplementeerd in de applicatie. Het beoogde resultaat van deze paper is een volledig getraind model dat succesvol stemmen kan onderscheiden en geïntegreerd is in de applicatie.
