--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -29,15 +29,50 @@ Wanneer gezocht wordt naar manieren om stemmen te onderscheiden, is "speaker dia
 
 In \textcite{Khoma2023} wordt ook gesproken over twee categorieën van diarization, maar hier worden ze anders opgedeeld. De eerste categorie die in \textcite{Khoma2023} vermeld wordt is unsupervised diarization. Deze techniek maakt gebruik van unsupervised machine learning algoritmen om elke spreker een label te geven waarbij niet geweten is welke persoon bij welk label hoort \autocite{Khoma2023}. De tweede categorie is supervised diarization, waarin diarization methoden gecombineerd worden met identificatie technieken om zo een of meerdere personen uit een opname te kunnen herkennen \autocite{Khoma2023}. Deze techniek heeft als belangrijke eigenaardigheid dat het nodig is om de uitingen van meer dan een persoon te analyseren\autocite{Khoma2023}. Unsupervised diarization maakt gebruik van clustering methodes waarbij gelijkaardige segmenten onderverdeeld worden in categorieën, terwijl supervised diarization gebruik maakt van classificatie, waarbij de verschillende segmenten vergeleken worden met stemvoorbeelden \autocite{Khoma2023}.
 
+\textcite{Zhang2018} stelt dat de meeste diarization systemen bestaan uit maar niet gelimiteerd zijn tot de volgende relatief onafhankelijke componenten:
+\begin{itemize}
+	\item Een spraak segmentatie module die de delen verwijderd waarin niet gesproken wordt en de invoer uitingen in kleine segmenten verdeeld.
+	\item Een module die embeddings zoals spreker factoren, i-vectoren of d-vectoren extraheert uit de kleine segmenten.
+	\item Een clustering module die bepaald hoeveel sprekers in een audio fragment aanwezig zijn en de identiteiten van deze sprekers toewijst aan elk segment.
+	\item Een hersegmentatie module die de resultaten van de diarizatie verder verfijnt door extra beperkingen toe te voegen.
+\end{itemize}
+
 Speaker diarization is een techniek die gebruikt kan worden voor verschillende doeleinden, zoals o.a. spreker indexering, herkennen van een spreker en hulp bij speech-to-text transcriptie \autocite{AngueraMiro2012}. Dit maakt het een zeer interessante techniek om te gebruiken voor deze bachelorproef. De hieronder besproken modellen zijn dus ook speaker diarization modellen.
 
 \section{Reeds bestaande modellen}
 Wanneer het aankomt op reeds bestaande modellen, moet er gezocht worden naar twee zaken. De eerste is meer voor de hand liggend, namelijk modellen die instaan voor de speaker diarization. De tweede is echter ook belangrijk, namelijk modellen die instaan om de uitkomst van de eerste modellen te evalueren. Deze zijn belangrijk om te weten of het scheiden van de stemmen succesvol gebeurd is en te bepalen hoe goed het model is.
 
 \subsection{Diarization modellen}
-Voor deze bachelorproef worden verschillende modellen overwogen om er zo een gegronde keuze te kunnen maken welk model geïmplementeerd kan worden in de applicatie.
-
 %TODO: aanvullen met modellen
+Voor deze bachelorproef worden verschillende modellen overwogen om er zo een gegronde keuze te kunnen maken welk model geïmplementeerd kan worden in de applicatie. Het eerste model is pyannote.audio \footnote{Code pyannote.audio: \url{https://github.com/pyannote/pyannote-audio}}. Pyannote.audio is een open-source toolkit in Python die gebruikt wordt voor speaker diarization \autocite{Bredin2023}. De aanpak die voorgesteld wordt in \textcite{Bredin2023} is opgebouwd uit drie fasen:
+\begin{itemize}
+	\item segmentatie van de sprekers toegepast op een (lokaal) verschuivend venster
+	\item neural speaker embedding van elke (lokale) spreker
+	\item en (globale) agglomeratie clustering.
+\end{itemize}
+In deze paper wordt een recentere versie gebruikt, namelijk versie 3.0. Het grootste verschil met versie 2.1 zit in het feit dat er offline speaker diarization toegevoegd werd \textcite{Bredin2024}.
+
+%TODO NetVLAD opzoeken en uitleggen
+Een tweede model is een model dat VGG-Speaker-Recognition en UIS-RNN combineert \footnote{Code: \url{https://github.com/taylorlu/Speaker-Diarization}}. VGG-Speaker-Recognition \footnote{Code VGG-Speaker-Recognition: \url{https://github.com/WeidiXie/VGG-Speaker-Recognition}} is een Keras implementatie van \textcite{Xie2019}, een paper die focust op het herkennen van sprekers "in the wild". Om dit te bereiken wordt gefocust op een combinatie tussen Convolutionele Neurale Netwerken (CNNs) en een dictionary-based NetVLAD laag, waarin de CNNs bekend staan om lokale patronen te herkennen en de NetVLAD laag getraind kan worden om informatie in een invoer van willekeurige grootte te aggregeren in een descriptor van vaste grootte zodat de uiteindelijke representatie van de uiting niet wordt beïnvloed door irrelevante informatie \autocite{Xie2019}.
+\textcite{Xie2019} stelt dat een ideaal model voor spreker herkenning drie eigenschappen moet hebben, namelijk:
+\begin{enumerate}
+	\item Het moet fragmenten met willekeurige lengtes als invoer nemen en een descriptor met vaste lengte als uitvoer geven.
+	\item De descriptor moet compact zijn, weinig geheugen nodig hebben en eenvoudig opgeslagen en opgehaald kunnen worden.
+	\item De descriptor moet discriminerend zijn, wat wil zeggen dat de afstand tussen de descriptoren van verschillende sprekers groter is dan de afstand tussen die van dezelfde spreker.
+\end{enumerate}
+Om hieraan te voldoen gebruikt \textcite{Xie2019} een gemodificeerd ResNet op een volledig convolutionele manier gevolgd door een NetVLAD/GhostVLAD laag.\\
+UIS-RNN \footnote{Code UIS-RNN: \url{https://github.com/google/uis-rnn}} wordt besproken in \textcite{Zhang2018}, waarin een fully supervised diarization methode voorgesteld wordt. \textcite{Zhang2018} stelt dat UIS-RNN staat voor "unbounded interleaved-state recurrent neural network" gebaseerd op de volgende feiten:
+\begin{itemize}
+	\item Elke spreker wordt voorgesteld door een instantie van RNN en deze instanties delen dezelfde parameters
+	\item Er kan een onbeperkt ("unbounded") aantal RNN instanties gegenereerd worden.
+	\item De toestanden van verschillende RNN instanties, die overeenkomen met verschillende sprekers, worden in het tijdsdomein met elkaar verbonden.
+\end{itemize}
+
+%TODO: uitpluizen of diart relevant is voor BP (online diarization)
+\begin{comment}
+Een tweede model dat gebruikt wordt is diart \footnote{Code diart: \url{https://github.com/juanmc2005/diart}}. Dit model is de officiële implementatie van de resultaten van \textcite{Coria2021} en bestaat uit twee fases. De eerste fase past een end-to-end aanpak toe waarbij audio segmenten gebruikt worden die klein genoeg zijn om een aanvaardbare inschatting te maken van de maximale hoeveelheid sprekers die aanwezig zijn \autocite{Coria2021}. In de tweede fase wordt globale clustering toegepast op het resultaat van de eerste fase \autocite{Coria2021}.
+\end{comment}
+
 
 \subsection{Evaluatie van modellen voor diarization}
-%TODO
+Een eerste model dat gebruikt zal worden om de accuraatheid van de bovenstaande modellen te bepalen is pyannote.metrics \footnote{Code pyannote.metrics: \url{https://github.com/pyannote/pyannote-metrics}} en is samen ontwikkeld met de eerste versie van het model van \textcite{Bredin2023} dat hierboven beschreven werd. Pyannote.metrics is een open-source Python library voor reproduceerbare evaluatie, diagnostiek en foutenanalyse van speaker diarization systemen \autocite{Bredin2017}.
