inleiding en methodologie bijgewerkt

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -169,7 +169,7 @@
 }
 
 @Thesis{Branden2024,
-  author      = {Ine Van den Branden},
+  author      = {Van den Branden, Ine},
   date        = {2024},
   institution = {HOGENT},
   title       = {Elderspeak Detector: tekstanalyse met behulp van AI voor het detecteren van 'Secondary Babytalk' in de zorgverlening.},
@@ -237,6 +237,56 @@
   url      = {https://github.com/pyannote/pyannote-audio},
   language = {English},
   urldate  = {2025-03-14},
+}
+
+@Online{DongLu,
+  author  = {DongLu},
+  title   = {Speaker-Diarization},
+  url     = {https://github.com/taylorlu/Speaker-Diarization},
+  urldate = {2025-04-16},
+}
+
+@Online{Chau,
+  author  = {Chau},
+  title   = {{simple diarizer}},
+  url     = {https://github.com/cvqluu/simple_diarizer},
+  urldate = {2025-04-16},
+}
+
+@Misc{speechbrain,
+  author        = {Mirco Ravanelli and Titouan Parcollet and Peter Plantinga and Aku Rouhe and Samuele Cornell and Loren Lugosch and Cem Subakan and Nauman Dawalatabad and Abdelwahab Heba and Jianyuan Zhong and Ju-Chieh Chou and Sung-Lin Yeh and Szu-Wei Fu and Chien-Feng Liao and Elena Rastorgueva and François Grondin and William Aris and Hwidong Na and Yan Gao and Renato De Mori and Yoshua Bengio},
+  date          = {2021},
+  title         = {{SpeechBrain}: A General-Purpose Speech Toolkit},
+  doi           = {10.48550/ARXIV.2106.04624},
+  eprint        = {2106.04624},
+  note          = {arXiv:2106.04624},
+  archiveprefix = {arXiv},
+  copyright     = {arXiv.org perpetual, non-exclusive license},
+  keywords      = {Audio and Speech Processing (eess.AS), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  primaryclass  = {eess.AS},
+  publisher     = {arXiv},
+  year          = {2021},
+}
+
+@Online{hetarchief,
+  url          = {https://hetarchief.be/},
+  organization = {meemoo},
+  urldate      = {2025-03-18},
+}
+
+@Online{filext,
+  author       = {FILExt},
+  title        = {Opening an RTTM File},
+  url          = {https://filext.com/file-extension/RTTM},
+  organization = {FILExt},
+  urldate      = {2025-05-02},
+}
+
+@Online{Ryant,
+  author  = {Neville Ryant and Diego Augusto},
+  title   = {dscore},
+  url     = {https://github.com/nryant/dscore},
+  urldate = {2025-05-02},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
