--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -14,8 +14,8 @@ Het Zorglab is een lokaal dat voornamelijk gebruikt wordt tijdens de praktijkles
 
 In voorgaande jaren werd in de bachelorproeven van \textcite{Govaerts2022}, \textcite{Gussem2022} en \textcite{Daems2023} reeds succesvol een applicatie ontwikkeld die signalen van elderspeak kan herkennen aan de hand van kenmerken zoals toonhoogte en stemvolume. In deze applicatie kan men een audiofragment uploaden en dit aan de hand van een aantal parameters laten analyseren. In de jaren die daarop volgden werd er in de bachelorproeven van \textcite{Branden2024}, \textcite{Coetsiers2024} en \textcite{Schryver2024} onderzoek gedaan naar het integreren van een model dat spraak kan omzetten naar tekst, maar hier werd aangetoond dat de accuraatheid van bestaande modellen onvoldoende blijkt te zijn om een kwaliteitsvolle transcriptie uit te voeren van gesproken Nederlands.
 
-Aangezien de implementatie van speech-to-text nog niet geslaagd was, was er vraag naar een methode om stemmen te onderscheiden. Dit heeft als doel de implementatie van de transcriptie voor Vlaamse audio eenvoudiger te maken. Ook zal het gebruikt worden om er in de applicatie voor te zorgen dat enkel de stem van de student geanalyseerd wordt op signalen van elderspeak.
-
+Aangezien de implementatie van speech-to-text nog niet geslaagd was, was er vraag naar een methode om stemmen te onderscheiden. 
+Enerzijds werd deze vraag gesteld met als doel de implementatie van transcriptie voor Vlaamse audio te vereenvoudigen. Anderzijds heeft het als doel ook gebruikt te worden om er in de applicatie voor te zorgen dat enkel de stem van de student geanalyseerd wordt op signalen van elderspeak.
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
 \label{sec:onderzoeksvraag}
