--- a/bachproef/VerhoeyenLisaBP.tex
+++ b/bachproef/VerhoeyenLisaBP.tex
@@ -141,8 +141,8 @@
 % vormen. De structuur en titels hangen af van je eigen onderzoek. Je kan bv.
 % elke fase in je onderzoek in een apart hoofdstuk bespreken.
 
-%\input{...}
-%\input{...}
+\input{resultaten}
+\input{bespreking}
 %...
 
 \input{conclusie}
