verder geschreven aan resultaten

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -269,6 +269,7 @@
 }
 
 @Online{hetarchief,
+  title        = {Zoek & vind audiovisueel archiefmateriaal},
   url          = {https://hetarchief.be/},
   organization = {meemoo},
   urldate      = {2025-03-18},
@@ -287,6 +288,13 @@
   title   = {dscore},
   url     = {https://github.com/nryant/dscore},
   urldate = {2025-05-02},
+}
+
+@Online{BredinDatabase,
+  author  = {Bredin, Hervé},
+  title   = {pyannote-database},
+  url     = {https://github.com/pyannote/pyannote-database/},
+  urldate = {2025-05-01},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
